# SpatiaLLM

./: .gitignore  GUI_SETUP_GUIDE.md  README.md  Snakefile  package-lock.json  requirements.txt
LM2PCG/: CMakeLists.txt  LLM_AGENT_README.md  README.md  Run_agent.md  ai_api_wrapper.py  enrich_room_types.py  mutli_room_agent2.py  pcg.sh  requirements.txt  room_database.py  spatial_rooms.db
LM2PCG/data/configs/: default.yaml
LM2PCG/data/rooms/Full House/: Truts values House.docx
LM2PCG/data/rooms/Full House/floor_0/: rooms_manifest.csv
LM2PCG/data/rooms/Full House/floor_0/room_001/: chair_001.ply  curtain_001.ply  door_001.ply  object_manifest.csv  plant_001.ply  shell_001.ply  table_001.ply  window_001.ply
LM2PCG/data/rooms/Full House/floor_0/room_002/: chair_002.ply  curtain_002.ply  door_002.ply  object_manifest.csv  plant_002.ply  window_002.ply
LM2PCG/data/rooms/Full House/floor_0/room_003/: chair_003.ply  door_003.ply  object_manifest.csv  plant_003.ply  table_003.ply  window_003.ply
LM2PCG/data/rooms/Full House/floor_0/room_003/filtered_outputs/: 00028_de skatting 81_2025-06-20_15.08.22_G11-0265_test.las
LM2PCG/data/rooms/Full House/floor_0/room_004/: couch_004.ply  curtain_004.ply  door_004.ply  object_manifest.csv  table_004.ply  window_004.ply
LM2PCG/data/rooms/Full House/floor_0/room_005/: chair_005.ply  couch_005.ply  curtain_005.ply  door_005.ply  monitor_005.ply  object_manifest.csv  plant_005.ply  shell_005.ply  table_005.ply  window_005.ply
LM2PCG/data/rooms/Full House/floor_1/room_001/: chair_001.ply  door_001.ply  object_manifest.csv  window_001.ply
LM2PCG/data/rooms/Full House/floor_1/room_002/: chair_002.ply  door_002.ply  object_manifest.csv  shell_002.ply  window_002.ply
LM2PCG/data/rooms/Full House/floor_1/room_003/: door_003.ply  object_manifest.csv  window_003.ply
LM2PCG/data/rooms/Full House/floor_1/room_004/: door_004.ply  object_manifest.csv  table_004.ply  window_004.ply
LM2PCG/data/rooms/Full House/floor_1/room_005/: door_005.ply  object_manifest.csv  shell_005.ply  window_005.ply
LM2PCG/docs/: AI_API.md  CHANGELOG.md  COMPREHENSIVE_SYSTEM_PROMPT.md  POINTCLOUD_VIEWER.md
LM2PCG/include/pcg/: FEC.hpp  bbox.hpp  clustering.hpp  color_gmm.hpp  csv_writer.hpp  params.hpp  ply_io.hpp
LM2PCG/include/pcg/geometry/: area.hpp  volume.hpp
LM2PCG/include/pcg/recon/: af.hpp  poisson.hpp
LM2PCG/output2/floor_0/: rooms_manifest.csv
LM2PCG/output2/floor_0/room_001/: planes_data.csv  room_001.csv
LM2PCG/output2/floor_0/room_001/results/filtered_clusters/chair_001/: 0-1-10_chair_cluster.ply  0-1-10_chair_uobb.ply  0-1-11_chair_cluster.ply  0-1-11_chair_uobb.ply  0-1-12_chair_cluster.ply  0-1-12_chair_uobb.ply  0-1-9_chair_cluster.ply  0-1-9_chair_uobb.ply
LM2PCG/output2/floor_0/room_001/results/filtered_clusters/curtain_001/: 0-1-13_curtain_cluster.ply  0-1-13_curtain_uobb.ply  0-1-14_curtain_cluster.ply  0-1-14_curtain_uobb.ply
LM2PCG/output2/floor_0/room_001/results/filtered_clusters/door_001/: 0-1-17_door_cluster.ply  0-1-17_door_uobb.ply  0-1-18_door_cluster.ply  0-1-18_door_uobb.ply  0-1-19_door_cluster.ply  0-1-19_door_uobb.ply
LM2PCG/output2/floor_0/room_002/: planes_data.csv  room_002.csv
LM2PCG/output2/floor_0/room_003/: planes_data.csv  room_003.csv
LM2PCG/output2/floor_0/room_004/: planes_data.csv  room_004.csv
LM2PCG/output2/floor_0/room_005/: room_005.csv
LM2PCG/output2/floor_1/: rooms_manifest.csv
LM2PCG/output2/floor_1/room_001/: planes_data.csv  room_001.csv
LM2PCG/output2/floor_1/room_002/: planes_data.csv  room_002.csv
LM2PCG/output2/floor_1/room_003/: room_003.csv
LM2PCG/output2/floor_1/room_004/: planes_data.csv  room_004.csv
LM2PCG/output2/floor_1/room_005/: planes_data.csv  room_005.csv
LM2PCG/scripts/: ai_agent_helper.py  ai_api.py  api_server.py  interactive_vis.py  monitor_api_log.py  run_batch.sh
LM2PCG/src/apps/: pcg_area.cpp  pcg_bbox.cpp  pcg_bbox_single.cpp  pcg_color.cpp  pcg_reconstruct.cpp  pcg_room.cpp  pcg_volume.cpp
LM2PCG/src/color/: color_gmm.cpp
LM2PCG/src/geometry/: area.cpp  bbox.cpp  clustering.cpp  volume.cpp
LM2PCG/src/io/: csv_writer.cpp  params.cpp  ply_io.cpp
LM2PCG/src/recon/: af.cpp  poisson.cpp
LM2PCG/web/pointcloud-viewer/: AUTOMATION_SUMMARY.md  MULTISELECT_FEATURE.md  README.md  SELECTION_ACTIONS.md  package-lock.json  package.json  start_dev.sh  stop_dev.sh  tsconfig.json  vite.config.ts
LM2PCG/web/pointcloud-viewer/public/: index.html
LM2PCG/web/pointcloud-viewer/public/data/sam2_latest/: cluster.ply
LM2PCG/web/pointcloud-viewer/public/manifests/: sam2_latest.json
LM2PCG/web/pointcloud-viewer/scripts/: downsample_and_prepare_room.mjs  prepare_visualization.mjs  start_servers.mjs  uobb_compute.mjs
LM2PCG/web/pointcloud-viewer/src/: App.tsx  main.tsx  types.ts
LM2PCG/web/pointcloud-viewer/src/loaders/: mesh.ts  ply.ts
LM2PCG/web/pointcloud-viewer/src/utils/: api.ts  manifest.ts
LM2PCG/web/pointcloud-viewer/src/viewer/: PointCloudView2.tsx
SAM23D/mask2cluster/: CMakeLists.txt
SAM23D/mask2cluster/include/m2c/: dbscan_seeded.h  io_las.h  pipeline.h  types.h  validator.h
SAM23D/mask2cluster/src/: io_las.cpp  io_pose.cpp  kdtree.cpp  mask2cluster_cli.cpp  pipeline.cpp  validator.cpp
(+398 files in other folders)
